style.css
/* ... */
p.message.form-error::after {
	content: 'Message is required';
	position: absolute;
	bottom: .8rem;
	left: 50%;
	transform: translateX(-50%);
	width: 10rem;
	height: 2rem;
	text-align: center;
	line-height: 2rem;
	background-color: var(--clr-error);
	color: var(--clr-background-white);
	border-radius: .4rem;
	font-size: .9rem;
	z-index: 105;
}
p.name.form-error::before {
	content: '';
	position: absolute;
	top: 2.8rem;
	left: 50%;
	transform: translateX(-50%);
	width: 1rem;
	height: 1rem;
	text-align: center;
	line-height: 2.2rem;
	background-color: var(--clr-error);
	color: var(--clr-background-white);
	transform: rotate(45deg);
	font-size: .9rem;
	z-index: 105;
}

p.email.form-error::before {
	content: '';
	position: absolute;
	top: 2.8rem;
	left: 50%;
	transform: translateX(-50%);
	width: 1rem;
	height: 1rem;
	text-align: center;
	line-height: 2.2rem;
	background-color: var(--clr-error);
	color: var(--clr-background-white);
	transform: rotate(45deg);
	font-size: .9rem;
	z-index: 105;
}

p.message.form-error::before {
	content: '';
	position: absolute;
	bottom: 2rem;
	left: 50%;
	transform: translateX(-50%);
	width: 1rem;
	height: 1rem;
	text-align: center;
	line-height: 2.2rem;
	background-color: var(--clr-error);
	color: var(--clr-background-white);
	transform: rotate(45deg);
	font-size: .9rem;
	z-index: 105;
}

p.form-error[data-display-value='none']::after {
	display: none !important;
}
p.form-error[data-display-value='none']::before {
	display: none !important;
}

.focused {
	top: -1rem !important;
	font-size: .9rem !important;
}

textarea:focus + label, 
input:focus + label {
	top: -1rem !important;
	font-size: .9rem !important;
}


/* ----- THANK YOU MODAL ----- */
.thank-you {
	height: 100%;
	width: 100%;
	position: absolute;
	z-index: 150;
	top: 0;
	left: 0;
	display: none;
	justify-content: center;
	align-items: center;
}

.thank-you__foreground {
	z-index: 116;
	width: 30rem;
	height: 18rem;
	display: flex;
	flex-direction: column;
	justify-content: flex-end;
	align-items: center;
	gap: 1rem;
	background-color: var(--clr-background-darker-gray);
	position: relative;
	border-radius: 4.375rem 1rem 4.375rem 1rem;
	padding: 2em;
}

.thank-you__icon {
	z-index: 117;
	position: absolute;
	top: -2rem;
	width: 6rem;
	height: 6rem;
	background-color: var(--clr-background-darker-gray);
	border-radius: 20rem;
}

.thank-you__icon svg path {
	fill: var(--clr-main-blue);
}

.thank-you__foreground h3 {
	font-size: 1.5rem;
	font-family: 'Inter';
	font-weight: 900;
	color: var(--clr-dark-blue);
}

.thank-you__foreground p {
	font-size: 1.1rem;
	font-family: 'Inter';
	font-weight: 400;
	color: var(--clr-dark-blue);
}

.thank-you__btn {
	width: 100%;
	justify-self: flex-end;
	margin-top: 1rem;
	border-radius: 2.7rem 1rem 4.375rem 2.7rem;
}

.thank-you__background {
	background-color: rgba(0, 0, 0, 0.8);
	position: fixed;
	z-index: 115;
	width: 100%;
	height: 100%;
}

.modal-closed {
	display: none !important;
}




/* ----- MEDIA QUERIES ----- */

@media only screen and (max-width: 100em) {
	.fixed__bottom-icons {
		left: 1.5rem;
		bottom: 1rem;
	}
	
	.fixed__top {
		padding: 0 1.5rem;
	}

	.page-number {
		left: 1.5rem;
	}

	.page-number-contact {
		left: 1.5rem;
	}

	.fixed__top-nav_btn {
		right: 1.5rem;
	}

	.fixed__bottom-arrow {
		right: 1.2rem;
		bottom: 1rem;
	}

	.row {
		max-width: 71.25rem;
	}
	.row-portfolio {
		max-width: 71.25rem;
	}

	#pp-nav ul, .pp-slidesNav ul {
		padding-right: 0rem !important;
	}

}

@media only screen and (max-width: 90em) { /* 1440px */
	.preload-screen img {
		width: 3.5rem;
	}

	.home-page__wrapper {
		padding-bottom: 6rem;
	}

	.portfolio-page__wrapper {
		padding-bottom: 6rem;
	}

	.about-page__wrapper {
		padding-bottom: 6rem;
	}

	.contact-page__wrapper {
		padding-bottom: 6rem;
	}

	.page-number {
		position: relative;
		margin-bottom: 1rem;
		margin-left: -1rem;
	}
	
	.row {
		max-width: 64rem;
	}

	.home-page__yellow-element {
		top: 5%;
	}
}

@media only screen and (max-width: 80em) { /* 1280px */

	.row {
		max-width: 60em;
	}
	.col-6 {
		flex: 0 0 75%;
		max-width: 75%;
	}

	.home-page__wrapper {
		padding-left: 4.5rem;
		padding-right: 4.5rem;
	}

	.portfolio-page__wrapper {
		padding: 7rem 4.5rem 4rem 4.5rem;
	}

	.portfolio-page__image {
		flex: 0 1 auto;
		height: 37%;
	}

	.portfolio-project__title {
		font-size: clamp(1.2rem, 3.2vmin, 1.5rem);
		line-height: clamp(1.2rem, 3.2vmin, 1.5rem);
	}

	.portfolio-project__tech {
		font-size: .95rem;
	}

	.portfolio-project__link {
		font-size: 1rem;
	}

	.portfolio-project__description {
		font-size: .95rem;
	}

	.about-page__wrapper {
		padding: 7rem 4.5rem;
	}

	.contact-page__wrapper {
		padding-left: 4.5rem;
		padding-right: 4.5rem;
	}

}

@media only screen and (max-width: 71.25em) { /* 1140px */
	.menu {
		width: 40%;
	}

	.row {
		padding: 0 0rem;
	}

	.home-page__wrapper {
		padding-bottom: 9rem;
	}

	.home-page__dots-square {
		top: 75%;
		right: 10%;
	}

	.portfolio-page__animation--bottom {
		flex-direction: column;
	}

	.portfolio-page__wrapper {
		padding-left: 8rem;
		padding-right: 8rem;
	}

	.portfolio-page__projects-box {
		flex-direction: row-reverse;
		height: 20rem;
		border-radius: 3.375rem 1rem 3.375rem 1rem;
	}
	
	.portfolio-page__image {
		height: 100%;
		width: 45%;
	}

	.about-page__wrapper .row {
		padding-left: 4rem;
	}

	.about-page__description {
		margin-right: 0;
	}

	.about-page__dots-square {
		top: 75%;
		right: 25%; 
		width: 32vmin;
		height: 32vmin;
	}

	.contact-page__wrapper .row {
		width: 90%;
	}

	.contact-page__form-wrapper {
		width: 100%;
	}

}

@media only screen and (max-width: 60em) { /* 960px */
	.home-page__wrapper {
		padding-top: 7.75rem;
	}

	.contact-page__title {
		width: 100%;
	}

	.contact-page__blue-element {
		bottom: -50rem;
	}

	.contact-page__yellow-element {
		top: 20%;
	}

	.contact-page__title::after {
		display: none;
	}
}
/* ... */

